[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/yerl.png" type="Texture" id=1]
[ext_resource path="res://Sprites/yerlattack.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy3.gd" type="Script" id=3]
[ext_resource path="res://SFX/Attack.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.90387, 5.81891 )

[sub_resource type="CircleShape2D" id=2]
radius = 21.776

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.62988
height = 1.80236

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.30859, 6.11497 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 23, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 46, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 69, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 92, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 115, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 138, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 161, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 184, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 207, 0, 23, 15 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 15, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 45, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 75, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 15, 17 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Attack",
"speed": 13.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
} ]

[node name="Enemy3" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 1088
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="DefendingArea" type="Area2D" parent="."]
position = Vector2( -1.33228, 0.0740156 )
scale = Vector2( 1, 0.88 )
collision_layer = 4
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefendingArea"]
position = Vector2( 2.90075, 0.334702 )
shape = SubResource( 3 )

[node name="AttackingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
shape = SubResource( 4 )

[node name="AttackingMeleeArea" type="Area2D" parent="."]
scale = Vector2( 0.8, 1 )
monitorable = false
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingMeleeArea"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 22 )
animation = "Walk"
frame = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.722
pitch_scale = 1.3
[connection signal="hit" from="." to="." method="_on_Enemy2_hit"]
[connection signal="area_entered" from="AttackingArea" to="." method="_on_AttackingArea_area_entered"]
[connection signal="area_entered" from="AttackingMeleeArea" to="." method="_on_AttackingMeleeArea_area_entered" flags=3]
